--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
-        buildConfigField "String", "SETUP_API_URL", "\"https://192.168.4.1/\""
+        buildConfigField "String", "SETUP_API_URL", "\"http://192.168.4.1/\""
         buildConfigField "String", "MAIN_API_URL", "\"https://smartlockapp.zackpollard.pro/\""
     }
     buildTypes {
