--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,11 +31,13 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
     compile 'blue.aodev:material-values:1.1.1'
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:retrofit:2.4.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'io.reactivex.rxjava2:rxjava:2.1.6'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
     compile 'com.github.angads25:filepicker:1.1.1'
     compile 'com.android.support:recyclerview-v7:27.1.1'
+
+    compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
 }
